--- a/index.html
+++ b/index.html
@@ -16,8 +16,38 @@
     </div>
     <div class="content">
         <div class="content1">
+            <div class="signUpContent1">Sign up to get free tour to Ancient India</div>
         </div>
         <div class="content2">
+            <div class="container1">
+                <div class="firstNameContainer">
+                    <label for="firstName">FIRST NAME</label>
+                    <input type="text" name="firstName" id="firstName">
+                </div>
+                <div class="emailContainer">
+                    <label for="email">EMAIL</label>
+                    <input type="email" name="email" id="email">
+                </div>
+                <div class="passwordContainer">
+                    <label for="password">PASSWORD</label>
+                    <input type="password" name="password" id="password">
+                </div>
+            </div> 
+                
+                <div class="container2">
+                    <div class="lastNameContainer">
+                        <label for="lastName">LAST NAME</label>
+                        <input type="text" name="lastName" id="lastName">
+                    </div>
+                    <div class="phoneNumberContainer">
+                        <label for="phoneNumber">PHONE NUMBER</label>
+                        <input type="tel" name="phoneNumber" id="phoneNumber">
+                    </div>
+                    <div class="confirmPasswordContainer">
+                        <label for="confirmPassword">CONFIRM PASSWORD</label>
+                        <input type="password" name="confirmPassword" id="confirmPassword">
+                    </div>
+                </div>
         </div>
         <div class="content3">
             <div class="createAccountButton">
