--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                         <div class="passwordContainer">
                             <label for="password">PASSWORD</label>
                             <input type="password" name="password" id="password" required>
+                            <span id="password"></span>
                         </div>
                     </div>
         
@@ -43,11 +44,12 @@
                             </div>
                             <div class="phoneNumberContainer">
                                 <label for="phoneNumber">PHONE NUMBER</label>
-                                <input type="tel" name="phoneNumber" id="phoneNumber" required>
+                                <input type="tel" name="phoneNumber" id="phoneNumber"  pattern="[7-9]{1}[0-9]{9}" required>
                             </div>
                             <div class="confirmPasswordContainer">
                                 <label for="confirmPassword">CONFIRM PASSWORD</label>
                                 <input type="password" name="confirmPassword" id="confirmPassword" required>
+                                <span id="confirmPassword"></span>
                             </div>
                         </div>
                 </div>
