--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         </div>
                         <div class="passwordContainer">
                             <label for="password">PASSWORD</label>
-                            <input type="password" name="password" id="password" required>
+                            <input type="password" name="password" id="password"  pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@?%$&])[0-9A-Za-z!@?%$&]{8,}" required>
                             <span id="password"></span>
                         </div>
                     </div>
@@ -48,7 +48,7 @@
                             </div>
                             <div class="confirmPasswordContainer">
                                 <label for="confirmPassword">CONFIRM PASSWORD</label>
-                                <input type="password" name="confirmPassword" id="confirmPassword" required>
+                                <input type="password" name="confirmPassword" id="confirmPassword" pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@?%$&])[0-9A-Za-z!@?%$&]{8,}" required>
                                 <span id="confirmPassword"></span>
                             </div>
                         </div>
